--- a/.github/workflows/auto-push.yml
+++ b/.github/workflows/auto-push.yml
@@ -57,7 +57,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tagName: onlywrite-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version.
+          tagName: v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version.
           releaseName: 'OnlyWrite v__VERSION__'
           releaseBody: 'See the assets to download this version and install.'
           releaseDraft: false
