--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-table": "^8.21.2",
-    "@tauri-apps/plugin-process": "~2",
+    "@tauri-apps/plugin-dialog": "^2.2.1",
+    "@tauri-apps/plugin-process": "~2.2.1",
     "@tauri-apps/plugin-shell": "~2",
     "@tauri-apps/plugin-updater": "~2",
     "class-variance-authority": "^0.7.1",
