--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-table": "^8.21.2",
+    "@tauri-apps/api": "^2.4.1",
     "@tauri-apps/plugin-dialog": "^2.2.1",
+    "@tauri-apps/plugin-os": "^2.2.1",
     "@tauri-apps/plugin-process": "~2.2.1",
     "@tauri-apps/plugin-shell": "~2",
     "@tauri-apps/plugin-updater": "~2",
@@ -53,7 +55,7 @@
     "embla-carousel-react": "^8.5.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.487.0",
-    "next": "15.2.4",
+    "next": "15.3.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
